--- a/games/jigsaw.html
+++ b/games/jigsaw.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Enhanced Jigsaw Puzzle</title>
     <style>
+        /* (Your CSS code remains unchanged) */
         * {
             margin: 0;
             padding: 0;
@@ -224,6 +225,7 @@
             }
         }
     </style>
+
 </head>
 <body>
     <div class="container">
@@ -466,7 +468,7 @@
                 reader.readAsDataURL(file);
             }
         }
-    
+
         window.onload = initializePuzzle;
     </script>
     
