--- a/games/jigsaw.html
+++ b/games/jigsaw.html
@@ -5,227 +5,226 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Enhanced Jigsaw Puzzle</title>
     <style>
-        /* (Your CSS code remains unchanged) */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+      /* (Your CSS code remains unchanged) */
+      * {
+          margin: 0;
+          padding: 0;
+          box-sizing: border-box;
+      }
 
-        body {
-            font-family: system-ui, -apple-system, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
-            padding: 1rem;
-        }
+      body {
+          font-family: system-ui, -apple-system, sans-serif;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          min-height: 100vh;
+          background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+          padding: 1rem;
+      }
 
-        .container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 1rem;
-            width: 100%;
-            max-width: 800px;
-            background: white;
-            padding: 1.5rem;
-            border-radius: 1rem;
-            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
-        }
+      .container {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          gap: 1rem;
+          width: 100%;
+          max-width: 800px;
+          background: white;
+          padding: 1.5rem;
+          border-radius: 1rem;
+          box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+      }
 
-        .game-header {
-            text-align: center;
-            width: 100%;
-        }
+      .game-header {
+          text-align: center;
+          width: 100%;
+      }
 
-        .game-title {
-            font-size: 2rem;
-            color: #2d3748;
-            margin-bottom: 0.5rem;
-        }
+      .game-title {
+          font-size: 2rem;
+          color: #2d3748;
+          margin-bottom: 0.5rem;
+      }
 
-        .game-stats {
-            display: flex;
-            justify-content: space-around;
-            font-size: 1rem;
-            color: #4a5568;
-            width: 100%;
-        }
+      .game-stats {
+          display: flex;
+          justify-content: space-around;
+          font-size: 1rem;
+          color: #4a5568;
+          width: 100%;
+      }
 
-        .controls {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 0.5rem;
-            width: 100%;
-            justify-content: center;
-        }
+      .controls {
+          display: flex;
+          flex-wrap: wrap;
+          gap: 0.5rem;
+          width: 100%;
+          justify-content: center;
+      }
 
-        .button, .upload-label {
-            padding: 0.75rem 1rem;
-            color: white;
-            border: none;
-            border-radius: 0.5rem;
-            font-size: 0.9rem;
-            cursor: pointer;
-            transition: all 0.2s;
-            font-weight: 500;
-            text-align: center;
-        }
+      .button, .upload-label {
+          padding: 0.75rem 1rem;
+          color: white;
+          border: none;
+          border-radius: 0.5rem;
+          font-size: 0.9rem;
+          cursor: pointer;
+          transition: all 0.2s;
+          font-weight: 500;
+          text-align: center;
+      }
 
-        .button {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-        }
+      .button {
+          background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      }
 
-        .button:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-        }
+      .button:hover {
+          transform: translateY(-2px);
+          box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+      }
 
-        .upload-label {
-            background: linear-gradient(135deg, #84fab0 0%, #8fd3f4 100%);
-        }
+      .upload-label {
+          background: linear-gradient(135deg, #84fab0 0%, #8fd3f4 100%);
+      }
 
-        .file-input {
-            display: none;
-        }
+      .file-input {
+          display: none;
+      }
 
-        .puzzle-container {
-            width: 100%;
-            aspect-ratio: 1;
-            position: relative;
-            overflow: hidden;
-            background: #f7fafc;
-            border-radius: 1rem;
-            box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
+      .puzzle-container {
+          width: 100%;
+          aspect-ratio: 1;
+          position: relative;
+          overflow: hidden;
+          background: #f7fafc;
+          border-radius: 1rem;
+          box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.1);
+      }
 
-        .puzzle-grid {
-            display: grid;
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            gap: 2px;
-            padding: 4px;
-        }
+      .puzzle-grid {
+          display: grid;
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          gap: 2px;
+          padding: 4px;
+      }
 
-        .puzzle-piece {
-            background-repeat: no-repeat;
-            background-size: cover;
-            cursor: pointer;
-            transition: all 0.3s;
-            border-radius: 4px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
+      .puzzle-piece {
+          background-repeat: no-repeat;
+          background-size: cover;
+          cursor: pointer;
+          transition: all 0.3s;
+          border-radius: 4px;
+          box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      }
 
-        .puzzle-piece.selected {
-            transform: scale(0.95);
-            box-shadow: 0 0 0 3px #4299e1;
-        }
+      .puzzle-piece.selected {
+          transform: scale(0.95);
+          box-shadow: 0 0 0 3px #4299e1;
+      }
 
-        .puzzle-piece:hover:not(.selected) {
-            transform: scale(1.02);
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
+      .puzzle-piece:hover:not(.selected) {
+          transform: scale(1.02);
+          box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      }
 
-        .complete-message {
-            color: #2f855a;
-            font-weight: bold;
-            text-align: center;
-            padding: 1rem;
-            background-color: #c6f6d5;
-            border-radius: 0.75rem;
-            display: none;
-            animation: slideUp 0.5s ease-out;
-        }
+      .complete-message {
+          color: #2f855a;
+          font-weight: bold;
+          text-align: center;
+          padding: 1rem;
+          background-color: #c6f6d5;
+          border-radius: 0.75rem;
+          display: none;
+          animation: slideUp 0.5s ease-out;
+      }
 
-        @keyframes slideUp {
-            from {
-                transform: translateY(20px);
-                opacity: 0;
-            }
-            to {
-                transform: translateY(0);
-                opacity: 1;
-            }
-        }
+      @keyframes slideUp {
+          from {
+              transform: translateY(20px);
+              opacity: 0;
+          }
+          to {
+              transform: translateY(0);
+              opacity: 1;
+          }
+      }
 
-        .modal-overlay {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.5);
-            display: none;
-            z-index: 99;
-        }
+      .modal-overlay {
+          position: fixed;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          background: rgba(0, 0, 0, 0.5);
+          display: none;
+          z-index: 99;
+      }
 
-        .modal-overlay.active {
-            display: block;
-        }
+      .modal-overlay.active {
+          display: block;
+      }
 
-        .difficulty-selector {
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background: white;
-            padding: 1rem;
-            border-radius: 1rem;
-            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
-            display: none;
-            flex-direction: column;
-            gap: 1rem;
-            z-index: 100;
-            width: 90%;
-            max-width: 400px;
-        }
+      .difficulty-selector {
+          position: fixed;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          background: white;
+          padding: 1rem;
+          border-radius: 1rem;
+          box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
+          display: none;
+          flex-direction: column;
+          gap: 1rem;
+          z-index: 100;
+          width: 90%;
+          max-width: 400px;
+      }
 
-        .difficulty-selector.active {
-            display: flex;
-        }
+      .difficulty-selector.active {
+          display: flex;
+      }
 
-        .difficulty-button {
-            padding: 0.75rem 1rem;
-            border: none;
-            border-radius: 0.5rem;
-            background: #edf2f7;
-            color: #2d3748;
-            cursor: pointer;
-            transition: all 0.2s;
-            text-align: center;
-        }
+      .difficulty-button {
+          padding: 0.75rem 1rem;
+          border: none;
+          border-radius: 0.5rem;
+          background: #edf2f7;
+          color: #2d3748;
+          cursor: pointer;
+          transition: all 0.2s;
+          text-align: center;
+      }
 
-        .difficulty-button:hover {
-            background: #e2e8f0;
-        }
+      .difficulty-button:hover {
+          background: #e2e8f0;
+      }
 
-        @media (max-width: 768px) {
-            .game-title {
-                font-size: 1.5rem;
-            }
+      @media (max-width: 768px) {
+          .game-title {
+              font-size: 1.5rem;
+          }
 
-            .button, .upload-label {
-                padding: 0.6rem 0.9rem;
-                font-size: 0.8rem;
-            }
+          .button, .upload-label {
+              padding: 0.6rem 0.9rem;
+              font-size: 0.8rem;
+          }
 
-            .game-stats {
-                flex-direction: column;
-                gap: 0.5rem;
-                font-size: 0.9rem;
-            }
+          .game-stats {
+              flex-direction: column;
+              gap: 0.5rem;
+              font-size: 0.9rem;
+          }
 
-            .puzzle-container {
-                aspect-ratio: 1;
-            }
-        }
-    </style>
-
+          .puzzle-container {
+              aspect-ratio: 1;
+          }
+      }
+  </style>
 </head>
 <body>
     <div class="container">
@@ -375,8 +374,8 @@
                 const imageUrl = uploadedImage || puzzleImages[currentImage];
 
                 // Calculate the position for this piece
-                const x = (piece.correctPos % gridSize) * (100 / (gridSize - 1));
-                const y = Math.floor(piece.correctPos / gridSize) * (100 / (gridSize - 1));
+                const x = (piece.correctPos % gridSize) * 100 / (gridSize - 1);
+                const y = Math.floor(piece.correctPos / gridSize) * 100 / (gridSize - 1);
 
                 pieceElement.style.backgroundImage = `url(${imageUrl})`;
                 pieceElement.style.backgroundSize = `${gridSize * 100}%`;
