--- a/games/j copy.html
+++ b/games/j copy.html
@@ -268,7 +268,7 @@
         </div>
 
         <div class="complete-message" id="completeMessage">
-            🎉 Congratulations! Puzzle Complete! 🎉
+            Congratulations! Puzzle Complete! 🎉
         </div>
 
         <div class="stats">
