--- a/games/j copy.html
+++ b/games/j copy.html
@@ -144,7 +144,7 @@
 
         .puzzle-piece.clicked {
             transform: scale(1.05);
-            box-shadow: 0 0 20px rgba(0, 123, 255, 0.5);
+            box-shadow: 0 0 20px rgba(0, 98, 255, 0.549);
             z-index: 1;
         }
 
@@ -176,7 +176,7 @@
         }
 
         .difficulty-selector {
-            background-color: white;
+            background-color: rgba(255, 255, 255, 0.26);
             padding: 2rem;
             border-radius: var(--border-radius);
             box-shadow: 0 16px 32px rgba(0, 0, 0, 0.2);
