--- a/games/j copy.html
+++ b/games/j copy.html
@@ -58,22 +58,22 @@
             width: 100%;
         }
 
-        .button, .upload-label {
-            padding: 0.75rem 1.25rem;
-            border-radius: var(--border-radius);
-            font-size: 1rem;
-            cursor: pointer;
-            transition: all var(--transition-speed);
-            border: none;
-            font-weight: 500;
-            text-transform: uppercase;
-            letter-spacing: 0.5px;
-        }
+
+      .button, .upload-label {
+          padding: 0.75rem 1rem;
+          color: white;
+          border: none;
+          border-radius: 0.5rem;
+          font-size: 0.9rem;
+          cursor: pointer;
+          transition: all 0.2s;
+          font-weight: 500;
+          text-align: center;
+      }
 
         .button {
-            background-color: var(--primary-color);
-            color: white;
-        }
+          background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      }
 
         .button:hover {
             background-color: var(--primary-hover);
@@ -81,11 +81,9 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
 
-        .upload-label {
-            background-color: var(--success-color);
-            color: white;
-        }
-
+.upload-label {
+    background: linear-gradient(135deg, #84fab0 0%, #8fd3f4 100%);
+}
         .upload-label:hover {
             background-color: var(--success-hover);
             transform: translateY(-2px);
