--- a/planner/planner copy.html
+++ b/planner/planner copy.html
@@ -1114,3 +1114,18 @@ function updateAnalytics() {
     </script>        
 </body>
 </html>
+
+
+
+
+"What made you smile today?",
+"Who are you grateful for right now?",
+"What personal strength are you thankful for tooday?",
+"What simple pleasure did you enjoy today?",
+"What are you grateful for right now?",
+"What opportunity are you grateful for today?",
+"What did you accomplished today to feel proud of.",
+"It was a pleasure to see this person today.",
+"I feel safe when I am with this person.",
+"I feel greatful today because.",
+]S
