--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <h3>Get in Touch</h3>
             <p>Ready to transform your IT infrastructure? Our experts are available to discuss your needs.</p>
             <address>
-              <p><strong>Email:</strong> <a href="mailto:maximumraw@gmail.com">maximumraw@gmail.com</a></p>
+              <p><strong>Email:</strong> <a href="mailto:@gmail.com">Use the contact form</a></p>
               <p><strong>Phone:</strong> <a href="tel:+15145455441">(514) 545-5441</a></p>
               <p><strong>Address:</strong>Montreal<br>QC</p>
             </address>
